@@ -1,3 +1,8 @@
+1999-07-14  Laurent Pautet  <pautet@scapin.enst.fr>
+
+	* s-garuni.adb: As there is no second pass when there is no boot
+ 	mirrors, reply to pending requests immediatly.
+
 1999-07-14  Laurent Pautet  <pautet@dorine.enst.fr>
 
         * s-garuni.adb, s-garpar.ads, s-garpar.adb: Do not send unit table
